[tool.poetry]
name = "PavelGoshurenko_brain_games"
version = "2.1.0"
description = ""
authors = ["Pavel Goshurenko <goshurenkopl@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

