[tool.poetry]
name = "PavelGoshurenko_brain_games"
version = "2.6.0"
description = "Set of 6 simple console games"
authors = ["Pavel Goshurenko <goshurenkopl@gmail.com>"]
repository = "https://github.com/PavelGoshurenko/python-project-lvl1"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
  "License :: Freeware",
  "Programming Language :: Python :: 3.7"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

